<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundBlack"
    tools:context=".Login">
    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            >
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                />
            <EditText android:id="@+id/username"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/edit_text_shadow"
                android:hint="Username"
                android:padding="12dp"
                android:maxLength="20"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText android:id="@+id/password"
                android:maxLength="20"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_shadow"
                android:padding="12dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:onClick="login"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="12dp"
                android:layout_marginHorizontal="50dp"
                android:fontFamily="@font/poppinsregular"
                android:textAlignment="center"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/btn_dark"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.imageview.ShapeableImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/frame_6"
        />
</androidx.constraintlayout.widget.ConstraintLayout>